--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
 MONGO_DB="mongodb://localhost:27017/zentre"
+FIREBASE_API_KEY=AIzaSyDnbegS4JvFLVH-LafDWptjl8kVaG3gD-Q
+FIREBASE_AUTH_DOMAIN=zentre-app.firebaseapp.com
+FIREBASE_PROJECT_ID=zentre-app
+FIREBASE_STORAGE_BUCKET=zentre-app.appspot.com
+FIREBASE_MESSAGING_SENDER_ID=155982829583
+FIREBASE_APP_ID=1:155982829583:web:31a4227e030543c9daab7a
+FIREBASE_MEASUREMENT_ID=G-21S8E4PNSK
+FIREBASE_CRYPTO_KEY=zentre
